--- a/html/index.html
+++ b/html/index.html
@@ -6,16 +6,16 @@
     <link rel="stylesheet" href="../styles/style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <header class="aaa">
       <img src="../assets/eisenhower-matrix.jpg">
       <a 
 			  class="more_inf" 
 			  href="https://goal-life.com/page/method/matrix-eisenhower"
 			  >Want more details?
 		  </a>
-    </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+    </header>
+    <main class="centered-main-page-element">
+      <section id="topSectionForAddingElementToList">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input 
@@ -25,45 +25,49 @@
 					>
           <button>Add</button>
         </div>
-      </p>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="../assets/remove.svg">
-          </button>
-        </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input 
-					  type="text"
-						value="Go Shopping"
-						class="task"
-					>
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="../assets/remove.svg">
-          </button>
-        </li>
-      </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="../assets/remove.svg">
-          </button>
-        </li>
-      </ul>
-    </div>
+      </section>
+      <section>
+        <h3>Todo</h3>
+        <ul id="incompleteTasks">
+          <li>
+            <input type="checkbox">
+            <label class="task">Pay Bills</label>
+            <input type="text" class="task">
+            <button class="edit">Edit</button>
+            <button class="delete">
+              <img src="../assets/remove.svg">
+            </button>
+          </li>
+          <li class="editMode">
+            <input type="checkbox">
+            <label class="task">Go Shopping</label>
+            <input 
+					    type="text"
+						  value="Go Shopping"
+						  class="task"
+					  >
+            <button class="edit">Save</button>
+            <button class="delete">
+              <img src="../assets/remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3>Completed</h3>
+        <ul id="completed-tasks">
+          <li>
+            <input type="checkbox" checked>
+            <label class="task">See the Doctor</label>
+            <input type="text" class="task">
+            <button class="edit">Edit</button>
+            <button class="delete">
+              <img src="../assets/remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+    </main>
   <script src="../js/app.js"></script>
 </body>
 </html>
