--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="aaa">
-      <img src="../assets/eisenhower-matrix.jpg">
+      <img src="../assets/eisenhower-matrix.jpg" alt="eisenhower matrix">
       <a 
 			  class="more_inf" 
 			  href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -35,7 +35,7 @@
             <input type="text" class="task">
             <button class="edit">Edit</button>
             <button class="delete">
-              <img src="../assets/remove.svg">
+              <img src="../assets/remove.svg" alt="">
             </button>
           </li>
           <li class="editMode">
@@ -48,7 +48,7 @@
 					  >
             <button class="edit">Save</button>
             <button class="delete">
-              <img src="../assets/remove.svg">
+              <img src="../assets/remove.svg" alt="">
             </button>
           </li>
         </ul>
@@ -62,7 +62,7 @@
             <input type="text" class="task">
             <button class="edit">Edit</button>
             <button class="delete">
-              <img src="../assets/remove.svg">
+              <img src="../assets/remove.svg" alt="">
             </button>
           </li>
         </ul>
