--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="../styles/style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="page">
     <header class="header">
       <img class="header__img" src="../assets/eisenhower-matrix.jpg" alt="eisenhower matrix">
       <a 
